--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -353,12 +353,12 @@
                                         <i class="like-value">{{ node.likes|zero_to_empty }}</i>
                                     </li>
                                     <li id="share-{{ node.pk }}" data-id="{{ node.pk }}"
-                                        class={% if node.id in pubs_shared_with_me %}"remove-timeline"
+                                        class={% if node.have_shared %}"remove-timeline"
                                         title="Eliminar de mi skyline" {% else %}"add-timeline" title="Añadir a mi
                                             skyline" {% endif %}
                                     >
                                     <i class="material-icons md-18">format_quote</i>
-                                    <i class="share-values"> {{ pubs_shared|lookup:node.id|intword }}</i>
+                                    <i class="share-values"> {{ node.total_shared|zero_to_empty }}</i>
                                     </li>
                                     <li title="Responder" class="reply-comment"
                                         id="reply-caja-comentario-{{ node.pk }}">
