--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -181,10 +181,10 @@
                                             </li>
                                             <li title="Añadir a mi skyline" id="share-{{ node.id }}"
                                                 data-id="{{ node.pk }}"
-                                                class={% if node.id in pubs_shared_with_me %}"remove-timeline"{% else %}
+                                                class={% if node.have_shared %}"remove-timeline"{% else %}
                                                     "add-timeline"{% endif %}
                                             ><i class="material-icons md-18">format_quote</i><i
-                                                class="share-values"> {{ pubs_shared|lookup:node.id|intword }}</i></li>
+                                                class="share-values"> {{ node.total_shared|zero_to_empty }}</i></li>
                                             <li title="Responder" class="reply-comment"
                                                 id="reply-caja-comentario-{{ node.pk }}"><i
                                                     class="material-icons md-18">reply</i>
