--- a/skyfolk/templates/groups/board_theme.html
+++ b/skyfolk/templates/groups/board_theme.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col offset-l1 l10 s12 theme" data-id="{{ object.id }}">
+            <div class="col offset-l1 l10 s12 theme" data-id="{{ object.id }}" id="theme-{{ object.id }}">
                 <div class="card horizontal">
                     <div class="card-image">
                         <img class="lazyload" data-src="
