--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -7,12 +7,12 @@ Base para el head de la pagina (menu horizontal con busqueda etc...)
 <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper white z-depth-1">
-            <a title="Inicio" href="/inicio" class="brand-logo center logotipo_skyfolk"><span>S</span>kyfolk</a>
+            <a title="Inicio" href="{% url "latest_news:user-feed" %}" class="brand-logo center logotipo_skyfolk"><span>S</span>kyfolk</a>
             <a data-activates="vertical-menu" class="btn-flat left button-menu-left blue-text text-darken-1"><i
                     class="material-icons">menu</i></a>
             {% include "account/menu-horizontal.html" %}
             <a data-activates="notification-menu" class="right button-right-notify btn-flat"><i class="material-icons">notifications</i><span
-                    id="live_notify_badge">{{ user_notifications|length }}</span></a>
+                    id="live_notify_badge">{{ total_notifications }}</span></a>
             <div class="right field hide-on-med-and-down" id="searchform">
                 <form class="autocomplete-me" method='get' action="{% url 'user_profile:general-search' %}">
                     {{ searchForm }}
