--- a/skyfolk/templates/groups/board_theme.html
+++ b/skyfolk/templates/groups/board_theme.html
@@ -14,12 +14,7 @@
             <div class="col offset-l1 l10 s12 theme" data-id="{{ object.id }}" id="theme-{{ object.id }}">
                 <div class="card horizontal">
                     <div class="card-image">
-                        <img class="lazyload" data-src="
-
-
-
-
-                                {% if object.image %}{{ object.image.url }}{% else %}{% static "img/nuevo_back.png" %}{% endif %}"
+                        <img class="lazyload" data-src="{% if object.image %}{{ object.image.url }}{% else %}{% static "img/nuevo_back.png" %}{% endif %}"
                              style="width: 120px; height: 120px;">
                     </div>
                     <div class="card-stacked">
