--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -27,11 +27,12 @@
             <div class="col s12">
                 <ul class="tabs">
                     <li class="tab col s3"><a href="#foto" class="active">Foto</a></li>
+                    <li class="tab col s3"><a href="#video">Vídeo</a></li>
                     <li class="tab col s3"><a href="#collection">Colección</a></li>
                 </ul>
             </div>
             <div id="foto">
-                <form class="avatar-form" action="{% url "photologue:upload-photo" %}" method="post"
+                <form id="submit-photo" class="avatar-form" action="{% url "photologue:upload-photo" %}" method="post"
                       accept-charset="utf-8"
                       enctype="multipart/form-data">{% csrf_token %}
                     <div class="row">
@@ -108,7 +109,7 @@
                 </form>
             </div>
             <div id="collection">
-                <form method="post" action="{% url "photologue:upload-zip" %}" accept-charset="utf-8"
+                <form id="collection-form" method="post" action="{% url "photologue:upload-zip" %}" accept-charset="utf-8"
                       enctype="multipart/form-data">{% csrf_token %}
                     <div class="row">
                         <div class="file-field input-field">
@@ -157,6 +158,62 @@
                         <i class="material-icons right">file_upload</i>
                     </button>
                     <button id="close_upload_zip_form"
+                            class="waves-effect waves-light btn right transparent black-text btn-close"
+                            type="button">Cerrar
+                        <i class="material-icons right">close</i>
+                    </button>
+                </form>
+            </div>
+            <div id="video">
+                <form id="form-video" class="video-form" action="{% url "photologue:upload-video" %}" method="post"
+                      accept-charset="utf-8"
+                      enctype="multipart/form-data">{% csrf_token %}
+                    <div class="row">
+                        <div class="file-field input-field">
+                            <div class="btn blue darken-1 waves-effect waves-light">
+                                <span>{{ form_video.video.help_text }}</span>
+                                {{ form_video.video }}
+                            </div>
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">title</i>
+                            {{ form_video.name }}
+                            <label for="id_name_video">{{ form_video.name.help_text }}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">closed_caption</i>
+                            {{ form_video.caption }}
+                            <label for="id_caption_video">{{ form_video.caption.help_text }}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        {{ form_video.tags.errors }}
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">label</i>
+                            {{ form_video.tags }}
+                            <label for="id_tags_video">{{ form_video.tags.help_text }}</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        {{ form_video.is_public.errors }}
+                        <div class="input-field col s12">
+                            <p>
+                                {{ form_video.is_public }}
+                                <label for="id_is_public_video">{{ form_video.is_public.help_text }}</label>
+                            </p>
+                        </div>
+                    </div>
+                    <button class="waves-effect waves-light btn blue darken-1 right" type="submit">Subir
+                        <i class="material-icons right">file_upload</i>
+                    </button>
+                    <button id="close_upload_video_form"
                             class="waves-effect waves-light btn right transparent black-text btn-close"
                             type="button">Cerrar
                         <i class="material-icons right">close</i>
@@ -218,12 +275,6 @@
             </div>
         </div>
         <div class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
-        <form class="xxx-form" action="{% url "photologue:upload-video" %}" method="post"
-              accept-charset="utf-8"
-              enctype="multipart/form-data">{% csrf_token %}
-            {{ form_video }}
-            <input type="submit" value="ok">
-        </form>
     </div> <!-- end wrapper -->
     {% block js-gallery %}
         {{ block.super }}
