--- a/photologue/templates/photologue/photo_gallery_page.html
+++ b/photologue/templates/photologue/photo_gallery_page.html
@@ -1,4 +1,5 @@
 {% load avatar_tags %}
+{% load app_filters %}
 {% load i18n %}
 {% load humanize %}
 {% load el_pagination_tags %}
@@ -15,19 +16,26 @@
                         {% endfor %}
                     </div>
                 {% endif %}
-                <img class="lazyload" data-src="
-                        {% if photo.thumbnail %}{{ photo.thumbnail.url }}{% elif photo.image %}{{ photo.image.url }}{% else %}{{ photo.url_image }}{% endif %}"
-                     alt="{{ photo.title }}" title="{{ photo.title }}"
-                     onclick="location.href='{{ photo.get_absolute_url }}'">
+                {% if photo|classname == 'Photo' %}
+                    <img class="lazyload" data-src="{% if photo.thumbnail %}{{ photo.thumbnail.url }}{% elif photo.image %}{{ photo.image.url }}{% else %}{{ photo.url_image }}{% endif %}"
+                         alt="{{ photo.title }}" title="{{ photo.title }}"
+                         onclick="location.href='{{ photo.get_absolute_url }}'">
+                {% else %}
+                    <video controls style="width: 100%; height: 100%; outline: none;">
+                        <source src="{{ photo.video.url }}" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                {% endif %}
             </div>
             <div class="col s12 legend-content">
                 <div class="legend-user-image">
-                    {% avatar photo.owner.username %}
+                    {% avatar photo.owner %}
                 </div>
                 <div class="col l8 m8 s8 legend-user-data">
                     <a href="/profile/{{ photo.owner.username }}">@{{ photo.owner.username }}</a>
-                    <i class="photo-title truncate">{{ photo.title }}</i>
-                    <i class="truncate photo-date"><i class="material-icons md-18">access_time</i> {{ photo.date_added|naturaltime }}</i>
+                    <i class="photo-title truncate">{% if photo|classname == 'Photo' %}{{ photo.title }}{% else %}{{ photo.name }}{% endif %}</i>
+                    <i class="truncate photo-date"><i
+                            class="material-icons md-18">access_time</i> {{ photo.date_added|naturaltime }}</i>
                 </div>
             </div>
         </div>
