--- a/photologue/templates/photologue/photo_gallery_page.html
+++ b/photologue/templates/photologue/photo_gallery_page.html
@@ -17,14 +17,23 @@
                     </div>
                 {% endif %}
                 {% if photo|classname == 'Photo' %}
-                    <img class="lazyload" data-src="{% if photo.thumbnail %}{{ photo.thumbnail.url }}{% elif photo.image %}{{ photo.image.url }}{% else %}{{ photo.url_image }}{% endif %}"
+                    <img class="lazyload" data-src="
+
+
+                            {% if photo.thumbnail %}{{ photo.thumbnail.url }}{% elif photo.image %}{{ photo.image.url }}{% else %}{{ photo.url_image }}{% endif %}"
                          alt="{{ photo.title }}" title="{{ photo.title }}"
                          onclick="location.href='{{ photo.get_absolute_url }}'">
                 {% else %}
-                    <video controls style="width: 100%; height: 100%; outline: none;">
-                        <source src="{{ photo.video.url }}" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
+                    {% if photo.thumbnail %}
+                        <img class="lazyload" data-src="{{ photo.thumbnail.url }}"
+                             alt="{{ photo.name }}" title="{{ photo.name }}"
+                             onclick="location.href='{% url "photologue:pl-video" slug=photo.slug %}'">
+                    {% else %}
+                        <video controls style="width: 100%; height: 100%; outline: none;">
+                            <source src="{{ photo.video.url }}" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    {% endif %}
                 {% endif %}
             </div>
             <div class="col s12 legend-content">
@@ -32,10 +41,17 @@
                     {% avatar photo.owner %}
                 </div>
                 <div class="col l8 m8 s8 legend-user-data">
-                    <a href="/profile/{{ photo.owner.username }}">@{{ photo.owner.username }}</a>
-                    <i class="photo-title truncate">{% if photo|classname == 'Photo' %}{{ photo.title }}{% else %}{{ photo.name }}{% endif %}</i>
-                    <i class="truncate photo-date"><i
-                            class="material-icons md-18">access_time</i> {{ photo.date_added|naturaltime }}</i>
+                    <a href="{% url "user_profile:profile" username=photo.owner.username %}">@{{ photo.owner.username }}</a>
+                        {% if photo|classname == 'Photo' %}
+                            <a href="{% url "photologue:pl-photo" slug=photo.slug %}" class="photo-title truncate">
+                                <i class="material-icons md-18">camera_alt</i>{{ photo.title }}</a>
+                        {% else %}
+                            <a href="{% url "photologue:pl-video" slug=photo.slug %}" class="photo-title truncate">
+                                <i class="material-icons md-18">videocam</i>
+                                {{ photo.name }}</a>
+                        {% endif %}
+                        <i class="truncate photo-date"><i
+                                class="material-icons md-18">access_time</i> {{ photo.date_added|naturaltime }}</i>
                 </div>
             </div>
         </div>
