--- a/photologue/templates/photologue/videos/video_detail.html
+++ b/photologue/templates/photologue/videos/video_detail.html
@@ -5,7 +5,7 @@
 {% load humanize %}
 
 {% load compress %}
-{% block title %} <title>Skyfolk / {{ object.title }} por: {{ object.owner }}</title> {% endblock %}
+{% block title %} <title>Skyfolk / {{ object.name }} por: {{ object.owner }}</title> {% endblock %}
 
 {% block include_files %}
     {% compress css %}
@@ -18,7 +18,7 @@
 
 {% block content %}
     <div class="container">
-     {% if user.is_active %}
+        {% if user.is_active %}
             {% comment %}
             Formulario para citar un comentario
             {% endcomment %}
@@ -53,19 +53,16 @@
                     </form>
                 </div>
             </div>
-    {% endif %}
+        {% endif %}
         <div class="row">
             <div class="col l12 m12 s12 container-photo">
                 <div class="photo">
                     <div class="col l8 m12 s12 photo-body" data-id="{{ object.pk }}">
-                        {% if object.image %}
-                            <a href="{{ object.image.url }}">
-                                <img data-src="{{ object.image.url }}" class="thumbnail lazyload" alt="{{ object.title }}">
-                            </a>
-                        {% else %}
-                            <a href="{{ object.url_image }}">
-                                <img data-src="{{ object.url_image }}" class="thumbnail lazyload" alt="{{ object.title }}">
-                            </a>
+                        {% if object.video %}
+                            <video controls style="max-width: 100%; max-height: 100%;">
+                                <source src="{{ object.video.url }}" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         {% endif %}
                         <div class="col s12 photo-details">
                             <div class="legend-user-image">
@@ -73,9 +70,10 @@
                             </div>
                             <div class="col l8 m8 s8 legend-user-data">
                                 <a href="/profile/{{ object.owner.username }}">@{{ object.owner.username }}</a>
-                                <i class="photo-title"><i class="material-icons md-18">camera_alt</i>{{ object.title }}{% if object.caption %}
+                                <i class="photo-title"><i class="material-icons md-18">videocam</i>{{ object.name }}{% if object.caption %}
                                     <p>{{ object.caption|safe }} </p>{% endif %}</i>
-                                <i class="photo-date"><i class="material-icons">access_time</i> {% trans "Published" %} {{ object.date_added|naturaltime }}
+                                <i class="photo-date"><i
+                                        class="material-icons">access_time</i> {% trans "Published" %} {{ object.date_added|naturaltime }}
                                 </i>
                             </div>
                             <div class="col l12 m12 s12 tags-content">
@@ -90,19 +88,19 @@
                                     <div class="divider"></div>
                                     <div class="row">
                                         <div class="author-controls">
-                                            <a id="edit-photo"
+                                            <a id="edit-video"
                                                class="waves-effect waves-light btn right blue">Editar</a>
-                                            <a id="del-photo"
+                                            <a id="del-video"
                                                class="waves-effect waves-light btn right red">Eliminar</a>
                                             <div class="edit-form" id="wrapper-edit-form">
                                                 <form method="post" accept-charset="utf-8"
-                                                      action="{% url "photologue:edit-photo" object.pk %}">{% csrf_token %}
+                                                      action="{% url "photologue:edit-video" video_id=object.pk %}">{% csrf_token %}
                                                     <div class="row">
-                                                        {{ form.title.errors }}
+                                                        {{ form.name.errors }}
                                                         <div class="input-field col s12">
                                                             <i class="material-icons prefix">title</i>
-                                                            {{ form.title }}
-                                                            <label for="id_title">{% trans "title" %}</label>
+                                                            {{ form.name }}
+                                                            <label for="id_name">{% trans "title" %}</label>
                                                         </div>
                                                     </div>
                                                     <div class="row">
@@ -137,12 +135,16 @@
                         <div class="row">
                             {% if previous %}
                                 <a href="{{ previous.get_absolute_url }}">
-                                    <img title="{{ previous }}" class="responsive-img lazyload" data-src="{% if previous.thumbnail %}{{ previous.thumbnail.url }}{% elif previous.image %}{{ previous.image.url }}{% else %}{{ previous.url_image }}{% endif %}">
+                                    <img title="{{ previous }}" class="responsive-img lazyload" data-src="
+                                            {% if previous.thumbnail %}{{ previous.thumbnail.url }}{% endif %}">
                                 </a>
                             {% endif %}
                             {% if next %}
                                 <a href="{{ next.get_absolute_url }}">
-                                    <img title="{{ next }}" class="responsive-img lazyload" data-src="{% if next.thumbnail %}{{ next.thumbnail.url }}{% elif next.image %}{{ next.image.url }}{% else %}{{ next.url_image }}{% endif %}">
+                                    <img title="{{ next }}" class="responsive-img lazyload" data-src="
+
+
+                                            {% if next.thumbnail %}{{ next.thumbnail.url }}{% elif next.image %}{{ next.image.url }}{% else %}{{ next.url_image }}{% endif %}">
                                 </a>
                             {% endif %}
                         </div>
@@ -156,9 +158,9 @@
                         <div id="messages-wrapper">
                             {% if publications|length > 0 %}
                                 {% include "photologue/publications_entries.html" %}
-                                    <div class="progress loading_publications" style="display: none">
-                                        <div class="indeterminate blue darken-1"></div>
-                                    </div>
+                                <div class="progress loading_publications" style="display: none">
+                                    <div class="indeterminate blue darken-1"></div>
+                                </div>
 
                             {% else %}
                                 <div class="no-comments" id="without-comments">
@@ -167,16 +169,17 @@
                             {% endif %}
                             <div class="row form-wrapper">
                                 <form id="message-photo-form" action="" method="post">{% csrf_token %}
-                                    {{ publication_photo.csrftoken }}
-                                    {{ publication_photo }}
+                                    {{ publication_video.csrftoken }}
+                                    {{ publication_video }}
                                     <div class="file-field input-field">
-                                      <div class="btn">
-                                        <span>Imágenes</span>
-                                        <input id="id_image" name="image" type="file" multiple>
-                                      </div>
-                                      <div class="file-path-wrapper">
-                                        <input class="file-path validate" type="text" placeholder="Upload one or more files">
-                                      </div>
+                                        <div class="btn">
+                                            <span>Imágenes</span>
+                                            <input id="id_image" name="image" type="file" multiple>
+                                        </div>
+                                        <div class="file-path-wrapper">
+                                            <input class="file-path validate" type="text"
+                                                   placeholder="Upload one or more files">
+                                        </div>
                                     </div>
                                     <button type="submit" id="send_form_photo_publi"
                                             class="waves-effect waves-light btn right blue">
@@ -191,7 +194,7 @@
     </div>
     {% compress js %}
         <script src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}js/photo_detail.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}js/video_detail.js" type="text/javascript"></script>
         <script src="{{ STATIC_URL }}js/socket_photo.js"></script>
         <script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
     {% endcompress %}
