--- a/photologue/templates/photologue/videos/publications_entries.html
+++ b/photologue/templates/photologue/videos/publications_entries.html
@@ -29,15 +29,15 @@
                         <div class="image col l1 m2 s2"
                         {% if   user.id == node.author.id %}title="¡Eres el autor!"
                         style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
-                        <div class="usr-img img-responsive">{% avatar node.p_author %}</div>
+                        <div class="usr-img img-responsive">{% avatar node.author %}</div>
                     </div>
                     <div class="col l10 m12 s9">
                         <h2 class="h22"><a
                             href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                             {% if node.parent %}
                             <span class="chip">
-                                {% avatar node.parent.p_author %}
-                                <a href="/profile/{{ node.parent.p_author }}">@{{ node.parent.p_author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
+                                {% avatar node.parent.author %}
+                                <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
                             </span>
                             {% endif %}
                         </h2>
@@ -55,7 +55,7 @@
                         <div class="row images">
                             {% for image in images %}
                             <div class="col s4 z-depth-2 center">
-                                <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.p_author }}" title="Imagen de: {{ node.p_author }}">
+                                <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                             </div>
                             {% endfor %}
                         </div>
